k8s/apps/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  namespace: default
spec:
  selector:
    app: my-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080 # Сюда прилетает трафик на порт контейнера
